--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -3,8 +3,8 @@
       WTA
     </div>
     <div class="large-10 acrofont centerall"; style="text-align: center; margin-top:-134px; margin-bottom:40px; font-size:380%; font-weight:normal;">
-      Welcome to AcroParty!
+      Welcome to AcroFriends!
     </div>
   </div>
 
-<div style="text-align: center">Hello and welcome to Acrofriends!</div>
+<div style="text-align: center">Hello and welcome to AcroFriends!</div>
