--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,10 +1,12 @@
-<div class="row">
-    <div class="large-10 centerall"; style="text-align: center;  margin-top:180px; margin-bottom:40px; font-size:760%; font-weight:normal; opacity:.15;">
-      WTA
-    </div>
-    <div class="large-10 acrofont centerall"; style="text-align: center; margin-top:-134px; margin-bottom:40px; font-size:380%; font-weight:normal;">
-      Welcome to AcroFriends!
-    </div>
-  </div>
+<div id="landing-topbar"></div>
 
-<div style="text-align: center">Hello and welcome to AcroFriends!</div>
+
+<div id="landing-bgtext">WTA</div>
+<div id="landing-fgtext">Welcome to AcroFriends!</div>
+
+<div id="landing-signin">Sign in or Sign up</div>
+
+<div id="signin-twitter">Sign in with Twitter</div>
+<div id="signin-facebook">Sign in with Facebook</div>
+
+<div id="landing-bottombar"></div>
