--- a/app/assets/stylesheets/universal.css
+++ b/app/assets/stylesheets/universal.css
@@ -1,6 +1,10 @@
+/* main scheme is #03a9f4 main, #FF3100 notify, #e1f5fe background */
+
 body {
-  background: #673ab7;
+  background: #e1f5fe;
+  margin:0;
+  padding:0;
   font-family: 'Roboto', sans-serif;
-  color: white;
-  color: rgba(255,255,255, 0.87);
+  color: black;
+  color: rgba(0,0,0, 0.87);
 }
