paperclip and twitter imp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 <body>
 
 <%= yield %>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div id="alerts">
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+</alerts>
 </body>
 </html>
