--- a/app/assets/stylesheets/universal.css
+++ b/app/assets/stylesheets/universal.css
@@ -8,3 +8,13 @@ body {
   color: black;
   color: rgba(0,0,0, 0.87);
 }
+
+#alerts {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  bottom: 60px;
+  position: fixed;
+  text-align: center;
+  color: #FF3100;
+}
