--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -15,7 +15,7 @@
   |
   <span id="signin-facebook"><%= link_to "Facebook", omniauth_authorize_path(:user, :facebook) %></span>
   |
-  <span id="signin-google">Google</span>
+  <span id="signin-google"><%= link_to "Google", omniauth_authorize_path(:user, :google_oauth2) %></span>
 </div>
 
 <div id="landing-bottombar"></div>
