--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -18,14 +18,21 @@ pre {
   font-size: 11px;
 }
 
-a {
+a img{
+  z-index: 10;
   color: #000;
   &:visited {
     color: #666;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    background-color: #fa4200;
+    border-radius: 24px;
+    text-decoration: none;
+  }
+  &:active {
+    background-color: #ff5f00;
+    border-radius: 24px;
+    text-decoration: none;
   }
 }
 
