--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,8 +1,8 @@
 <div id="main-bottombar">
   <div id="main-icons">
-    <%= link_to(image_tag("New-128.png", size: "64", alt: "Start New Game", class: "main-icon"), groups_path) %>
-    <%= image_tag("User-Group-128.png", size: "64", alt: "Join or Start Group", class: "main-icon") %>
-    <%= image_tag("Graph-03-128.png", size: "64", alt: "Ratings and Stats", class: "main-icon") %>
-    <%= link_to(image_tag("Settings-02-128.png", size: "64", alt: "User Settings", class: "main-icon"), edit_user_registration_path) %>
+    <%= image_tag("New-128.png", size: "48", alt: "Start New Game", class: "main-icon") %>
+    <%= link_to(image_tag("User-Group-128.png", size: "48", alt: "Join or Start Group", class: "main-icon"), groups_path) %>
+    <%= image_tag("Graph-03-128.png", size: "48", alt: "Ratings and Stats", class: "main-icon") %>
+    <%= link_to(image_tag("Settings-02-128.png", size: "48", alt: "User Settings", class: "main-icon"), edit_user_registration_path) %>
   </div>
 </div>
