--- a/app/assets/stylesheets/universal.css.scss
+++ b/app/assets/stylesheets/universal.css.scss
@@ -4,6 +4,7 @@ body {
   background: #e1f5fe;
   margin:0;
   padding:0;
+  padding-bottom: 80px;
   font-family: 'Roboto', sans-serif;
   color: black;
   color: rgba(0,0,0, 0.87);
@@ -17,4 +18,22 @@ body {
   position: fixed;
   text-align: center;
   color: #FF3100;
+}
+
+a img{
+  z-index: 10;
+  color: #000;
+  &:visited {
+    color: #666;
+  }
+  &:hover {
+    background-color: #fa4200;
+    border-radius: 24px;
+    text-decoration: none;
+  }
+  &:active {
+    background-color: #ff5f00;
+    border-radius: 24px;
+    text-decoration: none;
+  }
 }
