--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -45,5 +45,8 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 <%= link_to "Back", :back %>
+<div id="main-signout">
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+</div>
 
 <%= render "shared/bottombar" %>
