--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -114,4 +114,12 @@
     text-align: center;
     margin-top: 30px;
   }
+  .groupinfo {
+    width: 85%;
+    margin: 0 auto;
+  }
+  .groupnames {
+    text-align: center;
+    font-size: 150%;
+  }
 }
