--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,27 +1,13 @@
 <% @mainpagetitle="Groups" %>
 <%= render "shared/topbar" %>
 
-<!-- <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Private</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<fieldset class="groupinfo">
+  <legend>Your Groups</legend>
+  <% @memberships.where(:user_id => current_user.id).each do |membership| %>
+    <p class="groupnames"><%= link_to membership.group.name, membership.group %></p>
+  <% end %>
+</fieldset>
 
-  <tbody>
-    <% @groups.each do |group| %>
-      <tr>
-        <td><%= group.name %></td>
-        <td><%= group.private %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table> -->
 
 <div id="newgrouplink">
   <%= link_to 'New Group', new_group_path %>
