--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,20 +1,12 @@
-<h1>Listing memberships</h1>
+<% @mainpagetitle = "Your Groups" %>
+<%= render "shared/topbar" %>
 
 <table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Group</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
-    <% @memberships.each do |membership| %>
+    <% @memberships.where(:user_id => current_user.id).each do |membership| %>
       <tr>
-        <td><%= membership.user_id %></td>
-        <td><%= membership.group_id %></td>
-        <td><%= link_to 'Show', membership %></td>
+        <td><%= membership.group.name %></td>
+        <td><%= link_to 'Show', membership.group %></td>
         <td><%= link_to 'Edit', edit_membership_path(membership) %></td>
         <td><%= link_to 'Destroy', membership, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -25,3 +17,5 @@
 <br>
 
 <%= link_to 'New Membership', new_membership_path %>
+
+<%= render "shared/bottombar" %>
