--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -122,4 +122,18 @@
     text-align: center;
     font-size: 150%;
   }
+  #privatestatus {
+    margin-top: 20px;
+    text-align: center;
+    font-style: italic;
+  }
+  .groupmembernames {
+    text-align: center;
+    font-size: 130%;
+  }
+  .choosegroup select {
+    font-size: 180%;
+    text-align: center;
+    margin-bottom: 15px;
+  }
 }
