--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,5 +1,30 @@
-<h1>New membership</h1>
+<% @mainpagetitle = "Join a group" %>
+<%= render "shared/topbar" %>
 
-<%= render 'form' %>
+<div id="joingroupform">
+  <%= form_for(@membership) do |f| %>
+    <% if @membership.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@membership.errors.count, "error") %> prohibited this membership from being saved:</h2>
+
+        <ul>
+        <% @membership.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+    <div class="choosegroup">
+      <%= f.select :group_id, Group.all.collect { |p| [ p.name, p.id ] } %>
+    </div>
+    <div class="actions">
+      <%= f.submit "Join Group" %>
+    </div>
+  <% end %>
+</div>
 
 <%= link_to 'Back', memberships_path %>
+
+<%= render "shared/bottombar" %>
