--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -131,6 +131,10 @@
     text-align: center;
     font-size: 130%;
   }
+  #joingroupform {
+    text-align: center;
+    margin-top: 25px;
+  }
   .choosegroup select {
     font-size: 180%;
     text-align: center;
