--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,7 +7,7 @@
 
 <div id="showgroupmembers">
   <fieldset class="groupinfo">
-  <legend>Members</legend>
+  <legend>Members (<%= @group.users.count %>)</legend>
   <% @memberships.where(:group_id => @group).each do |membership| %>
     <p class="groupmembernames">
       <span><%= image_tag membership.user.avatar.url(:small), :style => "border-radius: 40px; margin-bottom:-5px; width:28px" %></span>
@@ -16,7 +16,6 @@
   <% end %>
 </fieldset>
 </div>
-
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
 <%= link_to 'Back', groups_path %>
