--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -5,6 +5,6 @@
     </div>
     <%= @mainpagetitle %>
     <div id="main-messagebutton">
-    <%= image_tag("Message-None-128.png", size: "36", alt: "Messages", class: "topbar-messagebutton") %>
+    <%= image_tag("Notification-None-128.png", size: "36", alt: "Messages", class: "topbar-messagebutton") %>
   </div>
 </div>
