--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -100,6 +100,10 @@
   #main-signout {
     margin-bottom: 80px;
   }
+  .topbar-privateimage {
+    width: 30px;
+    margin-bottom: -6px;
+  }
 
   /* GROUP PAGES */
   #newgrouplink {
