--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,21 +1,7 @@
 <% @mainpagetitle = @group.name + " group " %>
 <%= render "shared/topbar" %>
 
-<div id="privatestatus">
-  <%= @privatestatus %>
-</div>
-
-<div id="showgroupmembers">
-  <fieldset class="groupinfo">
-  <legend>Members (<%= @group.users.count %>)</legend>
-  <% @memberships.where(:group_id => @group).each do |membership| %>
-    <p class="groupmembernames">
-      <span><%= image_tag membership.user.avatar.url(:small), :style => "border-radius: 40px; margin-bottom:-5px; width:28px" %></span>
-      <span><%= membership.user.username %></span>
-    </p>
-  <% end %>
-</fieldset>
-</div>
+<%= link_to 'Members', showmembers_groups_path(@group) %>(<%= @group.users.count %>)
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
 <%= link_to 'Back', groups_path %>
