group chat almost complete

--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,5 +1,5 @@
-<li id="chatline" style="list-style-type:none">
-  <span id="messagetime" style="float: right; font-size:.6em; color:gray; margin-right:12px;"><%= chat.chattime %> ago</span>
+<li id="chatline" style="list-style-type:none; margin-left: -10px;">
+  <span id="messagetime" style="float: right; font-size:.6em; color:gray; margin-right:24px;"><%= chat.chattime %> ago</span>
   <span style="color:red;"><%= chat.user.username if chat.user %>
     <% if chat.user %>
     :
