--- a/app/views/chats/create.js.erb
+++ b/app/views/chats/create.js.erb
@@ -1,3 +1,3 @@
 $("#chat").append("<%= j render(@chat) %>");
 $("#chatbox").scrollTop(10000);
-$("#new_message")[0].reset();
+$("#new_chat")[0].reset();
