--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,9 +2,11 @@
 <%= render "shared/topbar" %>
 
 <div class="chattable" id="chatbox">
-  <ul id="chat">
-    <%= render @chat %>
-  </ul>
+  <div id="chatboxcontent">
+    <ul id="chat">
+      <%= render @chat %>
+    </ul>
+  </div>
 </div>
 
 <div id="groupchatui">
@@ -13,7 +15,7 @@
       <span id="groupchattext"><%= f.text_field :message, :placeholder => "Enter chat here...", :autofocus => true %></span>
       <%= f.hidden_field :user_id, :value => current_user.id %>
       <%= f.hidden_field :group_id, :value => @group.id %>
-      <span><%= f.submit "Send", :class => "button tiny radius centerall", :style => "margin-top:2px; margin-left:-6px;" %>
+      <span id="new_chat"><%= f.submit "Send", :class => "button tiny radius centerall", :style => "margin-top:2px; margin-left:-6px;" %>
       </span>
     </div>
   <% end %>
@@ -23,5 +25,6 @@
   <%= link_to 'Members', showmembers_groups_path(@group) %>(<%= @group.users.count %>)
 </div>
 
-
 <%= render "shared/bottombar" %>
+
+<%= javascript_include_tag "page/groupshow" %>
