--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -12,7 +12,7 @@
 <div id="groupchatui">
   <%= form_for @chat.build, remote: true do |f| %>
     <div>
-      <span id="groupchattext"><%= f.text_field :message, :placeholder => "Enter chat here...", :autofocus => true %></span>
+      <span><%= f.text_field :message, :id => "groupchatenter", :placeholder => "Enter chat here...", :autofocus => true %></span>
       <%= f.hidden_field :user_id, :value => current_user.id %>
       <%= f.hidden_field :group_id, :value => @group.id %>
       <span id="new_chat"><%= f.submit "Send", :class => "button tiny radius centerall", :style => "margin-top:2px; margin-left:-6px;" %>
