group chat done

--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -177,7 +177,7 @@
   }
   #chatline {
     list-style-type: none;
-    margin-left: -25px;"
+    margin-left: -25px;
   }
   #messagetime {
     float: right;
