--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   </span>
   <% if chat.user %>
-    <span><%= chat.message %></span>
+    <span><%= sanitize chat.message, :tags => %w(img)%></span>
   <% else %>
     <span style="color:purple; font-size:.9em;"><i><%= chat.message %></i></span>
   <% end %>
