--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -184,11 +184,12 @@
     font-size:.6em;
     color: gray;
     margin-right: 6px;
+    margin-top: 25px;
   }
   .emoji {
-    width: 1.5em;
-    height: 1.5em;
+    width: 1.8em;
+    height: 1.8em;
     display: inline-block;
-    margin-bottom: 0em;
+    margin-bottom: -4px;
   }
 }
