--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -1,6 +1,6 @@
 <div id="main-bottombar">
   <div id="main-icons">
-    <%= image_tag("New-128.png", size: "48", alt: "Start New Game", class: "main-icon") %>
+    <%= link_to(image_tag("New-128.png", size: "48", alt: "Start New Game", class: "main-icon"), new_game_path) %>
     <%= link_to(image_tag("User-Group-128.png", size: "48", alt: "Join or Start Group", class: "main-icon"), groups_path) %>
     <%= image_tag("Graph-03-128.png", size: "48", alt: "Ratings and Stats", class: "main-icon") %>
     <%= link_to(image_tag("Settings-02-128.png", size: "48", alt: "User Settings", class: "main-icon"), edit_user_registration_path) %>
