--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-About <%= ((@game.playendtime - DateTime.now)/60).round %> minutes left to play.
+Time left to play: <%= @timeremaining %>.
 
 <p>
   <strong>R1letters:</strong>
