--- a/app/assets/stylesheets/universal.css.scss
+++ b/app/assets/stylesheets/universal.css.scss
@@ -36,3 +36,36 @@ a img{
     text-decoration: none;
   }
 }
+
+button, .button {
+  cursor: pointer;
+  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  line-height: normal;
+  margin: 0.4rem 0.3rem;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  padding-top: 8px;
+  padding-right: 15px;
+  padding-bottom: 8px;
+  padding-left: 15px;
+  font-size: 94%;
+  /*     @else                            { font-size: $padding - rem-calc(2); } */
+  background-color: #008cba;
+  border-color: #0079a1;
+  color: white;
+  -webkit-transition: background-color 300ms ease-out;
+  -moz-transition: background-color 300ms ease-out;
+  transition: background-color 300ms ease-out;
+  padding-top: 12px;
+  padding-bottom: 13px;
+  -webkit-appearance: none;
+  border: none;
+  font-weight: normal !important; }
+  button:hover, button:focus, .button:hover, .button:focus {
+    background-color: #0079a1; }
+  button:hover, button:focus, .button:hover, .button:focus {
+    color: white; }
+
