--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -210,4 +210,29 @@
     margin: 0 auto;
     text-align: center;
   }
+  .roundtitle {
+    text-decoration: underline;
+    font-size: 190%;
+    font-weight: 200;
+  }
+  .gameletters {
+    font-size: 280%;
+    font-weight: 700;
+    color: red;
+  }
+  .gamecategories {
+    font-style: italic;
+    font-size: 120%;
+    font-weight: 500;
+    color: red;
+  }
+  .playarea {
+    background-color: white;
+    border-size: 2px;
+    border-style: solid;
+    border-color: gray;
+  }
+  #r2play, #r3play, #r4play {
+    display: none;
+  }
 }
