--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -21,6 +21,7 @@
           </span>
         </div>
       <% end %>
+      <%= render "shared/gamead" %>
     </div>
     <div id="r1answered">
       <% if @currentgamedata.r1answer == nil %>
@@ -29,13 +30,29 @@
         Your acro: "<%= @currentgamedata.r1answer %>"
       <% end %>
     </div>
-
   </div>
 
   <div class="playarea" id="r2play">
     <div class="roundtitle">Round 2</div>
     Category: <span class="gamecategories"><%= @game.r2cat %></span>
     <div class="gameletters"><%= @game.r2letters %></div>
+    <div>
+      <%= form_for @gamedata, :url => updateanswer_gamedata_path, :html => {:method => :post}, remote: true do |g| %>
+        <div>
+          <span><%= g.text_field :r2answer, :class => "answerfield", :placeholder => "Enter your acro for Round 2 here...", :autofocus => true %></span>
+          <span id="r2answer"><%= g.submit "Play", :class => "button answersubmitbutton" %>
+          </span>
+        </div>
+      <% end %>
+      <%= render "shared/gamead" %>
+    </div>
+    <div id="r2answered">
+      <% if @currentgamedata.r2answer == nil %>
+        Your acro: No acro yet...
+      <% else %>
+        Your acro: "<%= @currentgamedata.r2answer %>"
+      <% end %>
+    </div>
   </div>
 
   <div class="playarea" id="r3play">
@@ -52,20 +69,6 @@
   Time left to play: <%= @timeremaining %>.<br>
   players: <%= @game.playercount %>
 </div>
-
-<% if current_user.showads == true %>
-  <div class="ads">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- AcroFriends Play Mobile -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-2363108822222571"
-         data-ad-slot="2783157630"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
-<% end %>
 
 <%= render "shared/bottombar" %>
 
